bugfix: 找到 wire bug 位置
