# internal/server/grpc.go
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, video *service.VideoService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, video *service.VideoService, demo *service.DemoService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -29,5 +29,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, video *servi
 	srv := grpc.NewServer(opts...)
 	v1.RegisterGreeterServer(srv, greeter)
 	v1.RegisterVideoServer(srv, video)
+	v1.RegisterDemoServer(srv, demo)
 	return srv
 }
